# llm-optimiser-orkun

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  orkun_sft_caveman.yaml  orkun_sft_proc_local.yaml  orkun_sft_procedural.yaml  orkun_sft_procedural_v4.yaml  orkun_sft_warmup.yaml  phase_a.yaml
data/orkun/: loot.jsonl
docs/: phase-a-runbook.md  phase-b-done-b-runbook.md
kaggle/: probe_sat.py  stage_datasets.sh
kaggle/_stop/: kernel-metadata.json  stop.ipynb
orkun/: __init__.py  loop.py
orkun/causal/: counterfactual.py
orkun/curiosity/: curriculum.py  epistemic.py  learning_progress.py
orkun/data/: store.py
orkun/demo/: analytics.py  models.py  safe_exec.py  server.py
runs/: diag_gen.py  done_b_smoke.json  done_b_smoke_full.json  minibench_v4.json  minibench_v4.md
tests/: conftest.py  test_ablation.py  test_anchor.py  test_calibration.py  test_cf_distill.py  test_counterfactual.py  test_curiosity.py  test_difficulty.py  test_done_b.py  test_dreamer.py  test_epistemic.py  test_goals_families.py  test_goals_generator.py  test_group_rollout.py  test_holdout.py  test_lookahead.py  test_loop.py  test_loop_ablation.py  test_loop_group.py  test_loop_phase_b.py  test_orkish_available.py  test_pack.py  test_parallel_pool.py  test_policy_adapter.py  test_policy_backend.py  test_policy_sampler.py  test_reward.py  test_reward_head.py  test_rlvr.py  test_sample_efficiency.py  test_soup.py  test_store.py  test_waaagh_wm.py  test_wm_scoring.py  test_wm_trainer.py  test_world_sandbox.py  test_world_verifier.py
(+47 files in other folders)
