[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "orkun"
version = "0.1.0"
description = "Causal-curiosity self-play loop on the Orkish substrate"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "torch",
    "tokenizers",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["orkun*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
